--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -99,6 +99,7 @@ For example:
 
 FastStore allows you to create custom routes using [Next.js rewrites](https://nextjs.org/docs/app/api-reference/next-config-js/rewrites).
 It's possible to enable the Multiple page template feature for the custom route as well by adding your rewrites function into the `faststore.config.js` file as suggested in the [Next.js documentation](https://nextjs.org/docs/app/api-reference/next-config-js/rewrites):
+1. Add your rewrite function to faststore.config.js:
 
 ```js
 async rewrites() {
