--- a/docs/faststore/components/getting-started.mdx
+++ b/docs/faststore/components/getting-started.mdx
@@ -26,7 +26,14 @@ npm install @faststore/ui
 
 ## Adding styles
 
-Import one of the following options:
+There are two ways to style FastStore UI components:
+
+- [Overriding a component](https://developers.vtex.com/docs/guides/faststore/overrides-native-component): Customize a native component.
+- [Creating a new section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section): Build a new section for the Headless CMS.
+
+In both scenarios, you'll create a stylesheet for your component and import the necessary styles. For more details on creating a stylesheet and importing styles, refer to the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
+
+Once you have the stylesheet, import one of the following styles to it:
 
 ### All components included
 
@@ -39,4 +46,4 @@ Import one of the following options:
 ```sh
 @import "@faststore/ui/src/styles/base.scss";
 ```
-You should also, import the desired components' style individually, by checking the component references to import it's style.
+In this case, you should also import the desired components' styles individually by checking the component references to import their styles.
