--- a/docs/faststore/docs/go-live/1-setting-up-vtex-account-for-faststore.mdx
+++ b/docs/faststore/docs/go-live/1-setting-up-vtex-account-for-faststore.mdx
@@ -2,22 +2,16 @@
 title: '1. Setting up a VTEX account for FastStore'
 ---
 
-> ⚠️ This documentation is currently under development.
+This guide is the first step in integrating a **FastStore** headless storefront with the **VTEX** platform. In the following section, you will set up your VTEX environment and install all the necessary apps to start the integration of your storefront with VTEX.
 
-This guide is the first step in developing a **FastStore** website integrated with the **VTEX** Platform. In the following section, you will set up your VTEX environment and install all the necessary apps to start developing with FastStore.
-
-Notice that you must complete the following steps before developing your storefront or configuring your website DNS because needed dependencies, such as [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), will be installed and configured throughout this process.
-
----
+You must complete the following steps before configuring the website DNS because required dependencies, such as [VTEX Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), will be installed and configured throughout this process.
 
 ## Before you begin
 
-Before proceeding any further, make sure you have:
+Before you continue, make sure you have:
 
 1. Access to a **VTEX** account.
-2. The **VTEX IO CLI** installed on your machine. Please refer to [this guide](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-installation-and-command-reference) for more information.
-
----
+2. The **VTEX IO CLI 3.x** installed on your machine. Please check [this guide](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-installation-and-command-reference) for more information.
 
 ## Step by step
 
@@ -25,7 +19,7 @@ You will use the FastStore plugin for the VTEX IO CLI to install, with a single 
 
 1. Log in to your VTEX account:
 
-    > ℹ️ Remember to replace the values between curly brackets according to your scenario.
+    > ℹ️ Remember to replace the value between curly brackets according to your scenario.
     
     ```bash
     vtex login {account}
