--- a/docs/faststore/docs/customization/using-themes/importing-ui-components-styles.mdx
+++ b/docs/faststore/docs/customization/using-themes/importing-ui-components-styles.mdx
@@ -15,7 +15,7 @@ There are two different scenarios on how to import FastStore UI component styles
 
 ### Ensure you have a basic understanding of overrides
 
-Refer to the [Overriding components and props](https://developers.vtex.com/docs/guides/faststore/building-sections-overriding-components-and-props#overriding-a-native-component) and [Creating a new section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section) guides for more information. In this guide, we will use the [`ProductTitle`]() component and [`OurStores`]() section.
+Refer to the [Overriding components and props](https://developers.vtex.com/docs/guides/faststore/overrides-components-and-props-v1) and [Creating a new section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section) guides for more information. In this guide, we will use the [`ProductTitle`](https://developers.vtex.com/docs/guides/faststore/overrides-components-and-props-v1#product-title) component and [`OurStores`](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section#ourstore) section.
 
 ### Using CSS modules
 
@@ -23,9 +23,10 @@ We recommend using [CSS
 Modules](https://nextjs.org/docs/app/building-your-application/styling/css-modules) to style your new component.
 
 </Steps>
+
 ## Importing styles when overriding a component
 
-For this scenario, we will use as an example the override of the [ProductTitle](/components/molecules/product-title) component within the `ProductDetails` section.
+For this scenario, we will use as an example the override of the [ProductTitle](https://developers.vtex.com/docs/guides/faststore/overrides-components-and-props-v1#product-title) component within the `ProductDetails` section.
 
 1. Open your FastStore project, navigate to the `components` folder,
    and create the `customProductTitle.module.scss` file.
@@ -33,214 +34,211 @@ For this scenario, we will use as an example the override of the [ProductTitle](
 
 2. Add the following code to the `customProductTitle.module.scss` file.
 
-```scss copy
-.customProductTitle {
-  @import '@faststore/ui/src/components/molecules/Tag/styles.scss';
-}
-```
+   ```scss "customProductTitle.module.scss"
+   .customProductTitle {
+     @import '@faststore/ui/src/components/molecules/Tag/styles.scss';
+   }
+   ```
 
 This code imports the [Tag](https://developers.vtex.com/docs/guides/faststore/molecules-tag) styles to the custom component that you are creating.
 
 3. Import the styles in the `CustomProductTitle.tsx` file and add a `className` to the `section`
 
-```tsx
-import React from 'react'
-import { ProductTitle, Tag } from '@faststore/ui'
-
-
-import styles from './customProductTitle.module.scss'
-
-export default function CustomProductTitle() {
-  return (
-    <section className={styles.customProductTitle}>
-      <ProductTitle title={<h1>New headphones</h1>} />
-      <Tag variant="warning" label="On sale" onClose={() => {}} />
-    </section>
-  )
-}
-
-```
-
+   ```tsx CustomProductTitle.tsx
+   import React from 'react'
+   import { ProductTitle, Tag } from '@faststore/ui'
+   
+   
+   import styles from './customProductTitle.module.scss'
+   
+   export default function CustomProductTitle() {
+     return (
+       <section className={styles.customProductTitle}>
+         <ProductTitle title={<h1>New headphones</h1>} />
+         <Tag variant="warning" label="On sale" onClose={() => {}} />
+       </section>
+     )
+   }
+   
+   ```
 
 4. Run `yarn dev` in the terminal and open the local development server to see the changes.
    You should see a result similar to the image below:
 
-
-![importing-styles-result](https://vtexhelp.vtexassets.com/assets/docs/src/importing-styles___6de1d121d0acc88b4545d04955c3eb89.png)
+   ![importing-styles-result](https://vtexhelp.vtexassets.com/assets/docs/src/importing-styles___6de1d121d0acc88b4545d04955c3eb89.png)
 
 ## Importing styles when creating a new section
-To follow this guide we recommend creating the [`OurStores`]() section, which we will use as an example.
 
-With [the section on the page](), add some styles to it by opening the `components` folder and creating the `ourStores.module.scss` file. This file will import the FastStore UI components styles.
+To follow this guide, we recommend creating the [`OurStores`](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section#ourstore) section, which we will use as an example.
+
+With [the section on the page](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section#ourstore), add some styles to it by opening the `components` folder and creating the `ourStores.module.scss` file. This file will import the FastStore UI components styles.
 Add the following code to the `ourStores.module.scss` file:
 
-```scss filename="src/components/ourStores.module.scss" copy
-.ourStores {
-  @import '@faststore/ui/src/components/atoms/Button/styles.scss';
-  @import '@faststore/ui/src/components/atoms/Select/styles.scss';
-  @import '@faststore/ui/src/components/molecules/SelectField/styles.scss';
-}
-```
+   ```scss "src/components/ourStores.module.scss" 
+   .ourStores {
+     @import '@faststore/ui/src/components/atoms/Button/styles.scss';
+     @import '@faststore/ui/src/components/atoms/Select/styles.scss';
+     @import '@faststore/ui/src/components/molecules/SelectField/styles.scss';
+   }
+   ```
 
 This code imports the [Button](https://developers.vtex.com/docs/guides/faststore/atoms-icon) and [SelectField](https://developers.vtex.com/docs/guides/faststore/molecules-select-field) styles to the custom component that you are creating.
-You also need to import the `Select` component styles, since SelectField inherits it.
+You also need to import the `Select` component styles since `SelectField` inherits them.
 
 3. Now, import this stylesheet to `OurStores.tsx` file and apply it.
 
-```tsx {4-5,13} filename="src/components/OurStores.tsx" copy
-import React from 'react'
-import { Button, Icon, SelectField } from '@faststore/ui'
-
-import styles from './ourStores.module.scss'
-
-export interface OurStoresProps {
-  title: string
-  description: string
-}
-
-export default function OurStores(props: OurStoresProps) {
-  return (
-    <section className={styles.ourStores}>
-      <h2>{props.title}</h2>
-      <p>{props.description}</p>
-      <div>
-        <SelectField
-          id="select-state-store"
-          label="State:"
-          options={{
-            newYork: 'New York',
-            arizona: 'Arizona',
-            massachusetts: 'Massachusetts',
-            hawaii: 'Hawaii',
-          }}
-        />
-        <SelectField
-          id="select-city-store"
-          label="City:"
-          options={{
-            newYorkCity: 'New York City',
-            phoenix: 'Phoenix',
-            boston: 'Boston',
-            honolulu: 'Honolulu',
-          }}
-        />
-        <Button
-          variant="secondary"
-          icon={<Icon name="ArrowRight" />}
-          iconPosition="right"
-        >
-          Find Store
-        </Button>
-      </div>
-    </section>
-  )
-}
-```
+   ```tsx "src/components/OurStores.tsx" 
+   import React from 'react'
+   import { Button, Icon, SelectField } from '@faststore/ui'
+   
+   import styles from './ourStores.module.scss'
+   
+   export interface OurStoresProps {
+     title: string
+     description: string
+   }
+   
+   export default function OurStores(props: OurStoresProps) {
+     return (
+       <section className={styles.ourStores}>
+         <h2>{props.title}</h2>
+         <p>{props.description}</p>
+         <div>
+           <SelectField
+             id="select-state-store"
+             label="State:"
+             options={{
+               newYork: 'New York',
+               arizona: 'Arizona',
+               massachusetts: 'Massachusetts',
+               hawaii: 'Hawaii',
+             }}
+           />
+           <SelectField
+             id="select-city-store"
+             label="City:"
+             options={{
+               newYorkCity: 'New York City',
+               phoenix: 'Phoenix',
+               boston: 'Boston',
+               honolulu: 'Honolulu',
+             }}
+           />
+           <Button
+             variant="secondary"
+             icon={<Icon name="ArrowRight" />}
+             iconPosition="right"
+           >
+             Find Store
+           </Button>
+         </div>
+       </section>
+     )
+   }
+   ```
 
 You should be able to see something like the following:
-
 
 ![new-section-without-styles](https://vtexhelp.vtexassets.com/assets/docs/src/without-styles___4680d2a9a67e4175f3b73eff036ca8ac.png)
 
 4. Let's add more styles to it. You can customize it using the [design tokens](https://developers.vtex.com/docs/guides/faststore/global-tokens-overview#global-tokens) and [component's data attributes](https://developers.vtex.com/docs/guides/faststore/atoms-button#customization).
 
-```scss filename="src/components/ourStores.module.scss" copy
-.ourStores {
-  @import '@faststore/ui/src/components/atoms/Button/styles.scss';
-  @import '@faststore/ui/src/components/atoms/Select/styles.scss';
-  @import '@faststore/ui/src/components/molecules/SelectField/styles.scss';
-
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: var(--fs-spacing-5);
-  margin: auto;
-  background-color: var(--fs-color-neutral-bkg);
-
-  [data-fs-select-field] {
-    flex-direction: column;
-    align-items: flex-start;
-
-    [data-fs-select] {
-      border: var(--fs-border-width) solid var(--fs-border-color);
-      margin-top: var(--fs-spacing-0);
-      width: 10rem;
-      height: var(--fs-control-min-height);
-
-      select {
-        width: 100%;
-      }
-    }
-  }
-}
-
-.ourStores__title {
-  font-size: var(--fs-text-size-title-section);
-  margin-bottom: var(--fs-spacing-1);
-}
-
-.ourStores__content {
-  display: flex;
-  align-items: flex-end;
-  column-gap: var(--fs-spacing-5);
-  margin: var(--fs-spacing-5);
-}
-```
-
-```tsx {14,16} filename="src/components/OurStores.tsx" copy
-import React from 'react'
-import { Button, Icon, SelectField } from '@faststore/ui'
-
-import styles from './ourStores.module.scss'
-
-export interface OurStoresProps {
-  title: string
-  description: string
-}
-
-export default function OurStores(props: OurStoresProps) {
-  return (
-    <section className={styles.ourStores}>
-      <h2 className={styles.ourStores__title}>{props.title}</h2>
-      <p>{props.description}</p>
-      <div className={styles.ourStores__content}>
-        <SelectField
-          id="select-state-store"
-          label="State:"
-          options={{
-            newYork: 'New York',
-            arizona: 'Arizona',
-            massachusetts: 'Massachusetts',
-            hawaii: 'Hawaii',
-          }}
-        />
-        <SelectField
-          id="select-city-store"
-          label="City:"
-          options={{
-            newYorkCity: 'New York City',
-            phoenix: 'Phoenix',
-            boston: 'Boston',
-            honolulu: 'Honolulu',
-          }}
-        />
-        <Button
-          variant="secondary"
-          icon={<Icon name="ArrowRight" />}
-          iconPosition="right"
-        >
-          Find Store
-        </Button>
-      </div>
-    </section>
-  )
-}
-```
+   ```scss "src/components/ourStores.module.scss"
+   .ourStores {
+     @import '@faststore/ui/src/components/atoms/Button/styles.scss';
+     @import '@faststore/ui/src/components/atoms/Select/styles.scss';
+     @import '@faststore/ui/src/components/molecules/SelectField/styles.scss';
+   
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: var(--fs-spacing-5);
+     margin: auto;
+     background-color: var(--fs-color-neutral-bkg);
+   
+     [data-fs-select-field] {
+       flex-direction: column;
+       align-items: flex-start;
+   
+       [data-fs-select] {
+         border: var(--fs-border-width) solid var(--fs-border-color);
+         margin-top: var(--fs-spacing-0);
+         width: 10rem;
+         height: var(--fs-control-min-height);
+   
+         select {
+           width: 100%;
+         }
+       }
+     }
+   }
+   
+   .ourStores__title {
+     font-size: var(--fs-text-size-title-section);
+     margin-bottom: var(--fs-spacing-1);
+   }
+   
+   .ourStores__content {
+     display: flex;
+     align-items: flex-end;
+     column-gap: var(--fs-spacing-5);
+     margin: var(--fs-spacing-5);
+   }
+   ```
+   
+   ```tsx "src/components/OurStores.tsx"
+   import React from 'react'
+   import { Button, Icon, SelectField } from '@faststore/ui'
+   
+   import styles from './ourStores.module.scss'
+   
+   export interface OurStoresProps {
+     title: string
+     description: string
+   }
+   
+   export default function OurStores(props: OurStoresProps) {
+     return (
+       <section className={styles.ourStores}>
+         <h2 className={styles.ourStores__title}>{props.title}</h2>
+         <p>{props.description}</p>
+         <div className={styles.ourStores__content}>
+           <SelectField
+             id="select-state-store"
+             label="State:"
+             options={{
+               newYork: 'New York',
+               arizona: 'Arizona',
+               massachusetts: 'Massachusetts',
+               hawaii: 'Hawaii',
+             }}
+           />
+           <SelectField
+             id="select-city-store"
+             label="City:"
+             options={{
+               newYorkCity: 'New York City',
+               phoenix: 'Phoenix',
+               boston: 'Boston',
+               honolulu: 'Honolulu',
+             }}
+           />
+           <Button
+             variant="secondary"
+             icon={<Icon name="ArrowRight" />}
+             iconPosition="right"
+           >
+             Find Store
+           </Button>
+         </div>
+       </section>
+     )
+   }
+   ```
 
 After applying these additional styles, you should be able to see this final look:
-
 
 ![new-section-with-styles](https://vtexhelp.vtexassets.com/assets/docs/src/with-styles___4b1cd40d4dcbbba544fd051b1f2dcb36.png)
 
