--- a/docs/faststore/docs/what-is-faststore.mdx
+++ b/docs/faststore/docs/what-is-faststore.mdx
@@ -102,123 +102,82 @@ The diagram above shows a FastStore architectural flow, which includes the follo
  
 These are the tools that developers use to build and deploy FastStore projects. They include:
 
-  - **[FastStore CLI](https://developers.vtex.com/docs/guides/faststore/getting-started-3-faststore-cli):** Command-line interface (CLI) that can be used to interact with FastStore.
-  - **[VTEX IO CLI:](https://developers.vtex.com/docs/guides/vtex-io-documentation-vtex-io-cli-installation-and-command-reference)** CLI used when the project needs to interact with the VTEX platform.
-  - **Localhost preview:** Tool that allows developers to preview their FastStore projects locally.
+  - [FastStore CLI](https://developers.vtex.com/docs/guides/faststore/getting-started-3-faststore-cli): Command-line interface (CLI) that can be used to interact with FastStore.
+  - [VTEX IO CLI:](https://developers.vtex.com/docs/guides/vtex-io-documentation-vtex-io-cli-installation-and-command-reference) CLI used when the project needs to interact with the VTEX platform.
+  - Localhost preview: Tool that allows developers to preview their FastStore projects locally.
 
 ### Package layer
 
 FastStore consists of five main packages that enable the store to work: 
 
-  - **[Core](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson):** Provides the starter source code to get your store up and running. It contains four sub-packages: Components, SDK, UI, and API packages.
+  - [Core](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson): Provides the starter source code to get your store up and running. It contains four sub-packages: Components, SDK, UI, and API packages.
 
-  - **[SDK](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson):** Provides developers with a set of tools that handle all meaningful states an ecommerce store might have, such as Session, Cart, Component, and Search. The SDKs also provide GA4-compatible analytics functions to help you create powerful analytics capabilities in your ecommerce store.
+  - [SDK](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson): Provides developers with a set of tools that handle all meaningful states an ecommerce store might have, such as Session, Cart, Component, and Search. The SDKs also provide GA4-compatible analytics functions to help you create powerful analytics capabilities in your ecommerce store.
 
-  - **[UI](https://developers.vtex.com/docs/guides/faststore/components-index):** Gathers the design system based on FastStore components, using [Sass](https://sass-lang.com/) for styling.
+  - [UI](https://developers.vtex.com/docs/guides/faststore/components-index): Gathers the design system based on FastStore components, using [Sass](https://sass-lang.com/) for styling.
 
-  - **[API](https://developers.vtex.com/docs/guides/faststore/faststore-api-overview):** Connects your project to your favorite ecommerce provider by creating interfaces for querying products, collections, and handling carts.
+  - [API](https://developers.vtex.com/docs/guides/faststore/faststore-api-overview): Connects your project to your favorite ecommerce provider by creating interfaces for querying products, collections, and handling carts.
 
-  - **[CLI](https://developers.vtex.com/docs/guides/faststore/getting-started-3-faststore-cli):** Unifies the VTEX source code in `@faststore/core` with the customizations and extensions the store will create in the `/src` folder.
+  - [CLI](https://developers.vtex.com/docs/guides/faststore/getting-started-3-faststore-cli): Unifies the VTEX source code in `@faststore/core` with the customizations and extensions the store will create in the `/src` folder.
 
 ### Technologies
 
 To work with FastStore, you should be familiar with the following technologies:
 
-  - [TypeScript]()
-  - [React]()
-  - [Next.js]()
-  - [GraphQL]()
-  - [Node.js]()
+  - [TypeScript](https://www.typescriptlang.org/)
+  - [React](https://react.dev/)
+  - [Next.js](http://Next.js)
+  - [GraphQL](https://graphql.org/)
+  - [Node.js](http://Node.js)
 
+## Quickstart
 
+Follow the getting started track below to build and deploy a FastStore storefront at the domain `https://{accountName}.vtex.app/`.
 
+### 1. Initial settings
 
+Before starting the project, make sure you have the necessary tools and apps installed in your account or your local development environment. See the [Requirements](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements) guide for more information.
 
+### 2.  Starting the project
 
+After you have prepared your machine with the initial settings, you can start your project by following the steps below:
 
+  1. [FastStore WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview): Start the onboarding of your project with the FastStore WebOps app. This app streamlines the process, saving you the trouble of complex configurations and getting your project up and running quickly.
 
-Instead of focusing on the next big thing in ecommerce, we tend to focus on what will never change and try to nail it well. Our pillars are:
+  2. [Local Development](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project): After onboarding, start working on your store locally, making the initial changes and adjustments to your storefront.
 
-<Steps>
+## Next steps
 
-### Performance
-
-Amazing UX with great points on Lighthouse and Web Vitals.
-
-### Stability
-
-Your ecommerce should never lose a sale due to provider issues.
-
-### Analytics/SEO
-
-Understand who's visiting your store and reach a higher organic traffic.
-
-</Steps>
-
-## What is included?
-
-FastStore consists of [five main packages](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson) that enable the store to work: **FastStore Core**, **FastStore UI**, **FastStore SDK**, and **FastStore API** and **FastStore CLI**:
-
-| Package | Description |
-|---------| ------------|
-| Core | Provides the starter source code to get your store up and running. It contains four sub-packages: Components, SDK, UI, and API packages. |
-| UI | Gathers the design system based on FastStore components, using [Sass](https://sass-lang.com/) for styling. |
-| SDK | Provides developers with a set of tools that handle all meaningful states an ecommerce store might have, such as Session, Cart, Component, Search. |
-| API | Connects your project to your favorite ecommerce provider by creating interfaces for querying products and collections, as well as handling carts. |
-| CLI | unifies the VTEX source code in `@faststore/core` with the customizations and extensions the store will create in the `/src` folder. |
-
-## What prior knowledge is required?
-
-To follow along with this documentation, you should be familiar with web development fundamentals, including [HTML](https://developer.mozilla.org/en-US/docs/Web/HTML), [CSS](https://developer.mozilla.org/en-US/docs/Web/CSS) and [JavaScript](https://developer.mozilla.org/en-US/docs/Web/JavaScript), and a basic understanding of the following technologies
-
-- [TypeScript](https://www.typescriptlang.org/)
-- [React](https://react.dev/)
-- [Next.js](https://nextjs.org/)
-
-## What can you learn here?
+Now that you have your FastStore project running, extend your store functionalities by working with FastStore customization tools:
 
 <Flex>
 
-  <WhatsNextCard
-  title="Getting Started"
-  description="New to FastStore? Start by creating your first FastStore storefront."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/getting-started-overview"
-  linkTitle="See more"
-  />
+<WhatsNextCard
+title="UI components"
+description="Enhance your store's features with these components designed to help you quickly implement and customize features in your store."
+linkTo="https://developers.vtex.com/docs/guides/faststore/components-index"
+linkTitle="See more"
+/>
 
-  <WhatsNextCard
-  title="Themes"
-  description="Explore the look-and-feel of your store by using Themes, FastStore CSS stylesheets."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/themes-overview"
-  linkTitle="See more"
-  />
+<WhatsNextCard
+title="Using hemes"
+description="Explore the look-and-feel of your store by using Themes, FastStore CSS stylesheets."
+linkTo="https://developers.vtex.com/docs/guides/faststore/using-themes-overview"
+linkTitle="See more"
+/>
 
-  <WhatsNextCard
-  title="UI components"
-  description="Enhance your store's features with these components designed to help you quickly implement and customize features in your store."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/components-index"
-  linkTitle="See more"
-  />
+<WhatsNextCard
+title="Customizing sections and components"
+description="Explore new ways to customize your store components with overriding."
+linkTo="https://developers.vtex.com/docs/guides/faststore/building-sections-overview"
+linkTitle="See more"
+/>
 
-  <WhatsNextCard
-  title="Headless CMS"
-  description="Empower editors to manage web content with the autonomy to create, edit, and publish web content via the VTEX Admin."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/headless-cms-overview"
-  linkTitle="See more"
-  />
+<WhatsNextCard
+title="Extending the FastStore API"
+description="Extend the FastStore API schema by adding new data to the existing queries"
+linkTo="https://developers.vtex.com/docs/guides/faststore/api-extensions-overview"
+linkTitle="See more"
+/>
 
-  <WhatsNextCard
-  title="Customizing sections and components"
-  description="Explore new ways to customize your store components with overriding."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/building-sections-overview"
-  linkTitle="See more"
-  />
-
-  <WhatsNextCard
-  title="Going live"
-  description="Integrate FastStore with VTEX for a seamless customer experience. Connect to VTEX's infrastructure, set up payment gateways, configure   shipping options, and launch your store."
-  linkTo="https://developers.vtex.com/docs/guides/faststore/go-live-overview"
-  linkTitle="See more"
-  />
- 
 </Flex>
