--- a/docs/faststore/docs/headless-cms/how-to-preview-changes-in-development-mode.mdx
+++ b/docs/faststore/docs/headless-cms/how-to-preview-changes-in-development-mode.mdx
@@ -1,54 +1,41 @@
 ---
-title: 'How to preview Headless CMS changes in development mode'
+title: 'How to preview Headless CMS in development mode'
 ---
 
-To make local tests, you can use the `dev mode` of the Headless CMS
-to see a preview of your changes.
+During the implementation of a new section or component in the Headless CMS, you can use the `dev mode` to preview the Headless CMS before pushing the changes to your live store.
 
-1. After making changes to your FastStore project directory and syncing them with the Headless CMS,
-   access the VTEX Admin and navigate to **Storefront > Headless CMS**.
-2. Ensure you are in your FastStore project and the server is running.
+1. Open your FastStore project and start a development server.
+2. After making changes to your FastStore project directory and syncing them with the Headless CMS, access the VTEX Admin and navigate to **Storefront > Headless CMS**.
 3. Open the **Developer Tool** or right-click on the page and choose **Inspect**.
 4. In the Developer Tool terminal, run the following command:
 
-    ```bash 
-    localStorage.setItem('cmsDevMode', 1)
-    ```
+   ```bash 
+   localStorage.setItem('cmsDevMode', 1)
+   ```
 
 5. Refresh the page, and you should see the section **Development Mode** in the right sidebar.
 
-    ![development-mode](https://vtexhelp.vtexassets.com/assets/docs/src/development-mode___5cd79e364aea0785e98ce6bb379f2acc.png)
+   ![development-mode](https://vtexhelp.vtexassets.com/assets/docs/src/development-mode___5cd79e364aea0785e98ce6bb379f2acc.png)
 
-6. Click on `Preview`. A new tab will open; copy the link from this tab containing the
-   `contentType`, `documentId`, and `versionId`. The link should be similar to the
-   following:
+6. Click on `Preview`. A new tab will open
+7. Copy the link from this tab, which will contain the `contentType`, `documentId`, and `versionId` parameters. The link should be similar to the following:
 
-    ```
-    https://faststore.vtex.app/?contentType=page&documentId=bd9e01d6-534e-4e54-aa76-f864dcbad024&versionId=405118e9-7509-11ed-83ab-0eeee363631w
-    ```
+   ```
+   https://faststore.vtex.app/?contentType=page&documentId=bd9e01d6-534e-4e54-aa76-f864dcbad024&versionId=405118e9-7509-11ed-83ab-0eeee363631w
+   ```
 
-7. Now, access the preview link locally and change the parameters accordingly:
+7. Now, access the local preview  by replacing the following parameters accordingly:
 
-    ```
-    localhost:3000/api/preview/?contentType=<contentType>&documentId=<DOCUMENT_ID>&versionId=<VERSION_ID>
-    ```
+   ```
+   localhost:3000/api/preview/?contentType=<contentType>&documentId=<DOCUMENT_ID>&versionId=<VERSION_ID>
+   ```
 
-> ⚠️ Ensure you replace `<contentType>`, `<DOCUMENT_ID>`, and `<VERSION_ID>` with the actual values from your preview link.
+> ⚠️ Replace `<contentType>`, `<DOCUMENT_ID>`, and `<VERSION_ID>` with the values from your preview link.
 
-Given the previous example, the local preview link should be the following:
+8. Once you have reviewed your changes, terminate the development mode by opening the terminal in the `Developer Tools` and running  the following command in the Headless CMS page:
 
-    ```
-    localhost:3000/api/preview/?contentType= page&documentId=bd9e01d6-534e-4e54-aa76-f864dcbad024&versionId=405118e9-7509-11ed-83ab-0eeee363631w
-    ```
-
-8. Once you have reviewed your changes, terminate the development mode by accessing the Headless CMS page you've changed.
-   Open the terminal in the `Developer Tools` and run
-   the following:
-
-    ```bash 
-    localStorage.removeItem('cmsDevMode')
-    ```
+   ```bash 
+   localStorage.removeItem('cmsDevMode')
+   ```
 
 9. Refresh the page, and the development mode session will now be ended.
-
-
