--- a/docs/faststore/docs/go-live/2-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/2-configuring-external-dns.mdx
@@ -46,9 +46,9 @@ Now, you must set up your VTEX account to use the DNS records created in the pre
 6. Add the `secure` subdomain (e.g., `secure.mystore.com`) to the list.
    ![host-configuration](https://vtexhelp.vtexassets.com/assets/docs/src/account-settings-new___2e13bee3041e8505922a737b94652ca6.png)
 7. Add the root domain as well; e.g., if your domain is `www.mysite.com,` add `mysite.com.` For a complete setup, you must add three hosts for each domain:
-   - `www.mysite.com`  (store domain)
-   - `mysite.com` (root domain)
-   - `secure.mysite.com` (checkout/myaccount subdomain)
+   - `www.mystore.com`  (store domain)
+   - `mystore.com` (root domain)
+   - `secure.mystore.com` (checkout/myaccount subdomain)
 
 > ⚠️ To ensure a seamless checkout experience, all subdomains used by your store must be added to the host list. In other words, you must include both the `www.` and non-`www.` domains in the hosts' list. Stores with custom prefixes, like `shop.mystore.com`, need both the prefix and main domain (`shop.mystore.com` and `mystore.com`) added. This guarantees that the checkout process works seamlessly when customers access the store with or without `www.` or any other custom prefix.
 
